# rez-packages

./: README.md
arnold/: README.md  install.sh  package.py  versions.json
arnold/7.0.0.1/: package.py
arnold/common/: base.py  install.sh
libraries/boost/: CMakeLists.txt  package.py
libraries/expat/: CMakeLists.txt  package.py
libraries/jpeg/: CMakeLists.txt  package.py
libraries/openexr/: CMakeLists.txt  package.py
libraries/openssl/1.1.1/: package.py
libraries/png/: CMakeLists.txt  package.py
libraries/png/cmake/: png.cmake
libraries/tbb/: package.py
libraries/tiff/: CMakeLists.txt  package.py
libraries/tiff/cmake/: tiff.cmake
libraries/yamlcpp/: CMakeLists.txt  package.py
libraries/zlib/: CMakeLists.txt  package.py
python/: README.md  package.py  parse_build_args.py  versions.json
